# cpps

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CPPLINT.cfg  LICENSE.md  README.md  SECURITY.md  Taskfile.yml  codecov.yml  conanfile.txt  license.md  readme.md
.github/: PULL_REQUEST.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.md  feature-request.md  feature_request.md  question-discussion.md  security-vulnerability-report.md  security_vulnerability_report.md
.github/ISSUE_TEMPLATE_/: feature_request.md
.github/actions/setup_cache/: action.yml
.github/issue_template/: bug_report.md
.github/linters/: .cpp-lint.yml  .jscpd.json  .markdown-lint.yml  .yaml-lint.yml
.github/workflows/: ci.yml  clang.yml  codeql.yml  gcc.yml  linter.yml  msvc.yml
docs/: code_of_conduct.md  contributing.md  ebnf.ebnf  security.md  support.md
docs/examples/: class.md  function.md  variable.md
src/: CMakeLists.txt
src/cpps/: CMakeLists.txt  comment.hpp  cpps.natvis  cst.hpp  diagnosis.hpp  generator.cpp  generator.hpp  lexeme.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  source-location.hpp  source-printer.cpp  source-printer.hpp  source-reader.cpp  source-reader.hpp  source.hpp  token-ref.hpp  token.hpp  tokens.hpp  utility.hpp
src/cpps-cli/: CMakeLists.txt  main.cpp
src/cpps/cst/: .forward-declare-types.hpp  .include-declare-types.hpp  basic-expression.cpp  basic-expression.hpp  binary-expression.hpp  compound-statement.hpp  declaration-list.cpp  declaration-list.hpp  declaration.cpp  declaration.hpp  expression-list.cpp  expression-list.hpp  expression-statement.cpp  expression-statement.hpp  expression.cpp  expression.hpp  function-signature.cpp  function-signature.hpp  identifier-expression.cpp  identifier-expression.hpp  identifier.cpp  identifier.hpp  iteration-statement.hpp  list.hpp  node-list.hpp  node-variant.hpp  node.hpp  parameter-declaration-list.cpp  parameter-declaration-list.hpp  parameter-declaration.cpp  parameter-declaration.hpp  parameter-modifier.hpp  parser.cpp  parser.hpp  postfix-expression.cpp  postfix-expression.hpp  prefix-expression.cpp  prefix-expression.hpp  primary-expression.cpp  primary-expression.hpp  (+10 more)
src/cpps/cst/details/: node-type.hpp
src/cpps/grammar/: binary-literal.hpp  boolean-literal.cpp  boolean-literal.hpp  character-literal.hpp  decimal-literal.hpp  floating-literal.hpp  function-modifier.cpp  function-modifier.hpp  hexadecimal-literal.hpp  identifier.hpp  keyword.cpp  keyword.hpp  parameter-modifier.cpp  parameter-modifier.hpp  pointer-literal.cpp  pointer-literal.hpp  punctuator.cpp  punctuator.hpp  string-literal.hpp
src/cpps/utility/: bump-pointer-allocator.hpp  strings.hpp  type-list.hpp
test/unit-tests/: CMakeLists.txt
test/unit-tests/cpps/: CMakeLists.txt  check-diagnosis.cpp  check-diagnosis.hpp  cst-tests.cpp  diagnosis-tests.cpp  generator-tests.cpp  lexeme-tests.cpp  lexer-tests.cpp  parser-tests.cpp  source-location-tests.cpp  source-printer-tests.cpp  source-reader-tests.cpp  source-tests.cpp  token-tests.cpp  tokens-tests.cpp  utility-tests.cpp
test/unit-tests/cpps/cst/: compilation-tests.cpp  node-tests.cpp  node-variant-tests.cpp  parser-tests.cpp
test/unit-tests/cpps/grammar/: boolean-literal-tests.cpp  character-literal-tests.cpp  function-modifier-tests.cpp  identifier-tests.cpp  keyword-tests.cpp  parameter-modifier-tests.cpp  pointer-literal-tests.cpp  punctuator-tests.cpp
test/unit-tests/cpps/utility/: bump-pointer-allocator-tests.cpp  strings-tests.cpp
